--- a/styles/global.css
+++ b/styles/global.css
@@ -7,11 +7,16 @@ lg 1264px > < 1904px
 xl > 1904px
 */
 
+body {
+  margin: 0;
+}
+
 header {
   display: flex;
-  height: 56px;
   justify-content: space-between;
   align-items: center;
+  height: 96px;
+  padding: 0px 16px;
 }
 
 header nav {
@@ -28,6 +33,18 @@ header nav a {
 
 header nav a:hover {
   color: red;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.logo > div {
+  margin-left: 16px;
 }
 
 @media (min-width: 600px) {
