--- a/styles/global.css
+++ b/styles/global.css
@@ -7,8 +7,17 @@ lg < 1280px
 xl > 1536px
 */
 
+:root {
+  --heading-stroke: -1px -1px 0 #000, 0 -1px 0 #000, 1px -1px 0 #000, 1px 0 0 #000, 1px 1px 0 #000, 0 1px 0 #000, -1px 1px 0 #000, -1px 0 0 #000;
+}
+
+@font-face {
+  font-family: "Press Start 2P";
+  src: url("../fonts/PressStart2P-Regular.woff2");
+}
+
 .container {
-  max-width: 64rem;
+  max-width: 80rem;
   padding: 0 16px;
   margin-left: auto;
   margin-right: auto;
@@ -16,14 +25,32 @@ xl > 1536px
 
 body {
   margin: 0;
+  overflow: hidden;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 96px;
+  height: 128px;
   padding: 0px 16px;
+  z-index: 8;
+}
+
+header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  width: 1920px;
+  height: 422px;
+  background-image: url("../assets/banner.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+  overflow: hidden;
+  z-index: -1;
 }
 
 header nav {
@@ -32,10 +59,12 @@ header nav {
 
 header nav a {
   text-decoration: none;
-  font-size: 1.125rem;
   font-weight: 500;
   padding: 8px;
-  margin: 0 16px;
+  margin: 0 8px;
+  font-family: "Press Start 2P", cursive;
+  color: #fff;
+  text-shadow: var(--heading-stroke);
 }
 
 header nav a:hover {
@@ -46,20 +75,34 @@ header nav a:hover {
   display: flex;
   align-items: center;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bold;
+  font-family: "Press Start 2P", cursive;
+  color: #fff;
+  text-shadow: var(--heading-stroke);
+  user-select: none;
 }
 
-.logo > img {
+.logo>img {
   image-rendering: pixelated;
+  border: 1px solid #000;
+  border-radius: 50%;
 }
 
-.logo > div {
-  margin-left: 16px;
+.logo>div {
+  margin-left: 16px;  
 }
 
 @media (min-width: 640px) {
   header nav {
     display: block;
+  }
+}
+
+@media (min-width: 1920px) {
+  header::before {
+    width: 100%;
+    top: calc(422px - 22vw);
+    height: 22vw;
   }
 }
