Dynamic banner colors
You can now vary the color of the header banner by changing the css variables --banner-top and --banner-bottom which are defined for each page individually.

--- a/styles/global.css
+++ b/styles/global.css
@@ -34,11 +34,9 @@ header {
   align-items: center;
   height: 128px;
   padding: 0px 16px;
-  z-index: 8;
 }
 
-header::before {
-  content: "";
+.banner {
   position: absolute;
   top: 0;
   left: 50%;
@@ -49,7 +47,6 @@ header::before {
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
-  overflow: hidden;
   z-index: -1;
 }
 
@@ -100,7 +97,7 @@ header nav a:hover {
 }
 
 @media (min-width: 1920px) {
-  header::before {
+  .banner {
     width: 100%;
     top: calc(422px - 22vw);
     height: 22vw;
