--- a/styles/global.css
+++ b/styles/global.css
@@ -14,12 +14,20 @@ a[href^="https://www.000webhost.com"] {
 
 :root {
   --color-primary: #6787F5;
+  --color-bg: #f7f7f8;
+  --color-bg2: #fff;
   --color-h: #444;
   --color-p: #666;
   --color-border: #222;
   --stroke-heading: -1px -1px 0 var(--color-border), 0 -1px 0 var(--color-border), 1px -1px 0 var(--color-border), 1px 0 0 var(--color-border), 1px 1px 0 var(--color-border), 0 1px 0 var(--color-border), -1px 1px 0 var(--color-border), -1px 0 0 var(--color-border);
   --font-arcade: "Press Start 2P", cursive;
   --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+:root .dark {
+  --color-bg: #030D15;
+  --color-bg2: #001221;
+  --color-p: #bbb;
 }
 
 @font-face {
@@ -43,7 +51,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   font-family: var(--font-sans);
-  background: #f7f7f8;
+  background: var(--color-bg);
 }
 
 header {
@@ -119,7 +127,7 @@ header nav a:hover {
   justify-content: center;
   height: 56px;
   width: 100vw;
-  background: #fff;
+  background: var(--color-bg2);
   box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
 }
 
