--- a/styles/index.css
+++ b/styles/index.css
@@ -17,7 +17,7 @@ body.scrolled:not(.scroll-up) header {
   z-index: 8;
   padding: 8px 0;
   margin-bottom: 1rem;
-  transition: top 0.2s;  
+  transition: top 0.2s;
 }
 
 .scrolled .toolbar-wrapper {
@@ -25,7 +25,7 @@ body.scrolled:not(.scroll-up) header {
   background: linear-gradient(0deg, #8662f2 0%, #9054f0 100%);
 }
 
-.toolbar {  
+.toolbar {
   background: var(--color-bg2);
   border: 1px solid var(--color-border);
   padding: 4px 8px;
@@ -39,7 +39,7 @@ body.scrolled:not(.scroll-up) header {
   color: var(--color-primary);
 }
 
-.toolbar form {
+.toolbar form[name="search"] {
   width: 100%;
 }
 
@@ -63,18 +63,79 @@ body.scrolled:not(.scroll-up) header {
   gap: 8px;
 }
 
-.meme-card {
+.mehm-card {
   position: relative;
   border: 1px solid var(--color-border);
   border-radius: 4px;
+  cursor: pointer;
 }
 
-.meme-card img {
+.mehm-card img {
   position: absolute;
   top: 0;
   width: 100%;
   vertical-align: bottom;
   border-radius: 4px;
+  user-select: none;
+}
+
+.mehm-card img.selected {
+  z-index: 65;
+  position: relative;
+}
+
+.selected-container {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 65;
+  border: 1px solid var(--color-border);
+  border-radius: 4px;
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.3);
+  cursor: default;
+}
+
+.selected-container::before {
+  content: attr(name);
+  position: absolute;
+  z-index: 128;
+  color: #fff;
+  top: -32px;
+  left: 4px;
+  font-weight: 500;
+  text-shadow: var(--stroke-heading);
+}
+
+.mehm-card img.selected {
+  width: auto;
+  height: auto;
+  max-width: 100vw;
+  max-height: calc(100vh - 112px);
+}
+
+#close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 8px;
+  z-index: 128;
+  border-radius: 4px;
+  display: flex;
+  cursor: pointer;
+}
+
+#theater {
+  position: fixed;
+  inset: 0;
+  z-index: 64;
+  transition: background 0.2s;
+  pointer-events: none;
+}
+
+#theater.open {
+  background: rgba(0, 0, 0, 0.65);
+  pointer-events: all;
 }
 
 @media (min-width: 640px) {
