Add Datenschutz page

--- a/styles/kontakt.css
+++ b/styles/kontakt.css
@@ -1,14 +1,23 @@
 body{
 	color: white;
+	font-family: Arial;
+}
+
+p{
+	font-size: 16px;
 }
 
 input{
-	border: 1px solid #000000;
 	position: static;
+}
+
+input[type="file"]{ 
+	color:#777777;
 }
 
 label{
 	display: none;
+	 
 }
 
 textarea{
@@ -16,14 +25,15 @@ textarea{
 	height: 10em;	
 }
 
-input, textarea, section>div{
-	background: rgba(255,255,255, 0.75);	
+input, textarea, section>div, select{
+	background: rgba(255,255,255, 0.75);
+	padding: 0.5em;	
 }
 
-input,textarea, button{
-	padding: 0.5em;	
+input,textarea, button, label, select{
+		
 	font-family: Arial;
-	font-size: 14px;
+	font-size: 16px;
 	border-radius: 5px;
 	margin-bottom: 10px;
 	box-sizing: border-box;
@@ -34,6 +44,10 @@ form{
 	padding-top: 20px;
 }
 
+button{
+	padding: 0.5em;
+}
+
 button:hover {
   background: #999999;
 }
@@ -41,23 +55,30 @@ button:hover {
 section>div{
 	color:black;
 	padding: 1em;
-	font-size: 14px;
 	border-radius: 5px;
 	margin: 5px;
 }
 
+a:link, a:visited{
+	color:white;
+}
+
+a:hover{
+	color: #AAAAAA;
+}
+
 @media screen {
-	input,textarea, button{
+	input,textarea, button, select{
 		width: 100%;
 	}
 }
 
 @media screen and (min-width: 30em) {
-	input,textarea, button{
+	input,textarea, button, select{
 		width: 75%;
 	}
 	button{
-	margin-left: 70px;
+	margin-left: 90px;
 	}
 	section{
 	margin: auto;
@@ -65,12 +86,12 @@ section>div{
 	}
 	label{
 	display: inline-block; 
-	width: 70px;
+	width: 90px;
 	text-align: right;
 	vertical-align: top;
-	border: 1px solid transparent;
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
+	padding-right: 0.5em;
 	box-sizing: border-box;
 	}
 }
