--- a/numbers.css
+++ b/numbers.css
@@ -1,4 +1,5 @@
 h1, h5 {
+    text-shadow: none;
     color: whitesmoke;
     text-align: left;
     margin: 0;
@@ -13,7 +14,7 @@ table {
     border-spacing: 100px 20px;
 }
 
-td {
+td,th {
     font-size: larger;
     font-weight: 800;
     color: white;
@@ -23,7 +24,7 @@ td {
     background-color: rgba(0, 168, 255, 0.75);
     width: 300px;
 }
-td:nth-child(3n+1) {
+td:nth-child(3n+1), th:nth-child(3n+1) {
     color: rgba(0, 168, 255, 0.75);
     padding: 16px 32px;
     font-size:xx-large;
@@ -65,6 +66,7 @@ hr {
 }
 
 h3 {
+    text-shadow: none;
     text-align: center;
 }
 p {
@@ -110,4 +112,74 @@ p {
 #rickroll {
     text-decoration: none;
     color:rgba(0, 168, 255, 0.75);
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: xx-large;
+    }
+    h5 {
+        font-size: x-large;
+        margin-left: 0;
+    }
+    .body {
+      width: 100%;
+    }
+    .number_text {
+        margin: 0px 10px;
+        padding: 0px 10px;
+    }
+    p {
+        padding: 0px 10px;
+    }
+    table {
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 20px;
+    }
+    td:nth-child(3n+1), th:nth-child(3n+1) {
+        color: rgba(0, 168, 255, 0.75);
+        padding: 16px 32px;
+        font-size:x-large;
+        font-weight: 900;
+        background-color: whitesmoke;
+        border: 1px solid rgba(0, 168, 255, 0.75);
+        background-size: contain;
+        width: 60px;
+    }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 600px) {
+    h1 {
+        font-size: 50px;
+    }
+    h5 {
+        font-size: x-large;
+        margin-left: 0;
+    }
+    .body {
+      width: 80%;
+    }
+    .number_text {
+        margin: 0px 10px;
+        padding: 0px 10px;
+    }
+    p {
+        padding: 0px 10px;
+    }
+    table {
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 40px 20px;
+    }
+    td:nth-child(3n+1), th:nth-child(3n+1) {
+        color: rgba(0, 168, 255, 0.75);
+        padding: 16px 32px;
+        font-size:xx-large;
+        font-weight: 900;
+        background-color: whitesmoke;
+        border: 1px solid rgba(0, 168, 255, 0.75);
+        background-size: contain;
+        width: 60px;
+    }
 }
