--- a/styles/kontakt.css
+++ b/styles/kontakt.css
@@ -1,112 +1,158 @@
-body{
-	color: white;
-	font-family: Arial;
+main > section {
+	background: var(--color-bg3);
+	border-radius: 4px;
+	padding: 1rem;
 }
 
-p{
-	font-size: 16px;
+main > section > div {
+	margin: 0 auto;
+	max-width: 1024px;
 }
 
-input{
-	position: static;
+main label {
+	color: var(--color-h);
 }
 
-input[type="file"]{ 
-	color:#777777;
+main input, main textarea {
+	color: var(--color-p);
+	border: 1px solid var(--color-bg);
+	margin-bottom: 1rem;
 }
 
-label{
+main input::placeholder, main textarea::placeholder {
+	color: var(--color-p-a);
+}
+
+main input, main textarea, main label {
+	display: block;
+}
+
+main button {
+	background: var(--color-primary);
+	color: var(--color-h);
+	font-weight: 500;
+	margin-top: 1rem;
+}
+
+input[type="file"] {
+	color: #777;
+}
+
+label {
 	display: none;
-	 
 }
 
-textarea{
+textarea {
 	position: relative;
-	height: 10em;	
+	height: 10rem;
 }
 
-input, textarea, section>div, select{
-	background: rgba(255,255,255, 0.75);
-	padding: 0.5em;	
+input,
+textarea,
+select {
+	background: var(--color-bg-a);
+	padding: 0.5rem;
 }
 
-input,textarea, button, label, select{
-		
-	font-family: Arial;
-	font-size: 16px;
-	border-radius: 5px;
-	margin-bottom: 10px;
+input,
+textarea,
+button,
+label,
+select {
+	font-family: var(--font-sans);
+	font-size: 1rem;
+	border-radius: 4px;
+	margin-bottom: 8px;
 	box-sizing: border-box;
 	border: none;
 }
 
-form{
-	padding-top: 20px;
+form {
+	margin: 2rem 0;
 }
 
-button{
-	padding: 0.5em;
+button {
+	padding: 0.5rem;
 }
 
 button:hover {
-  background: #999999;
+	background: #999;
+	cursor: pointer;
 }
 
-section>div, article{
-	color:black;
+/* section>div,
+article {
+	color: black;
 	padding: 1em;
 	border-radius: 5px;
 	margin: 5px;
+} */
+
+article {
+	background: rgba(255, 255, 255, 0.75);
+	padding: 1rem;
 }
 
-article{
-	background: rgba(255,255,255, 0.75);
-		padding: 1em;
+/* a:link,
+a:visited {
+	color: white;
 }
 
-a:link, a:visited{
-	color:white; 
-}
-
-p>a:link, article>a:link, article>a:visited, li>a:link{
-	color:black; 
+p>a:link,
+article>a:link,
+article>a:visited,
+li>a:link {
+	color: black;
 	text-decoration: underline;
 }
 
- .document, article>div, article>h1, article>h2, article>h3, article>h4, article>p, article {
-	color:black !important;
-}
+.document,
+article>div,
+article>h1,
+article>h2,
+article>h3,
+article>h4,
+article>p,
+article {
+	color: black !important;
+} */
 
-a:hover{
-	color: #AAAAAA;
+main a:hover {
+	color: #aaa;
 }
 
 @media screen {
-	input,textarea, button, select{
+
+	input,
+	textarea,
+	button,
+	select {
 		width: 100%;
 	}
 }
 
-@media screen and (min-width: 30em) {
-	input,textarea, button, select{
-		width: 75%;
+@media screen and (min-width: 640px) {
+	main button {
+		max-width: 256px;
 	}
-	button{
-	margin-left: 90px;
+
+	input,
+	textarea,
+	button,
+	select {
+		/* width: 75%; */
 	}
-	section{
-	margin: auto;
-	width: 90%;
-	}
-	label{
-	display: inline-block; 
-	width: 90px;
-	text-align: right;
-	vertical-align: top;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
-	padding-right: 0.5em;
-	box-sizing: border-box;
+
+	
+
+	label {
+		/* display: inline-block;
+		width: 90px; */
+		/* text-align: right; */
+		/* vertical-align: top; */
+		/* padding-top: 0.5em; */
+		/* padding-bottom: 0.5em; */
+		/* padding-right: 0.5em; */
+		/* box-sizing: border-box; */
 	}
 }
-
